fix: value section mobile

--- a/src/styles/common/header/header.scss
+++ b/src/styles/common/header/header.scss
@@ -180,6 +180,7 @@
                 width: 13.9rem;
                 height: 5.2rem;
                 font-weight: 500;
+                padding: 0;
                 font-size: 1.8rem;
                 line-height: 2.2rem;
                 background-color: $white;
