--- a/src/styles/pages/homepage/value/value.scss
+++ b/src/styles/pages/homepage/value/value.scss
@@ -15,13 +15,13 @@
         @media(max-width: 1399px) {
             padding: 6rem 2rem;
         }
+        @media(max-width: 991px) {
+            padding: 3rem 1.2rem;
+        }
         @media(max-width: 767px) {
             padding: 3rem 2rem;
         }
 
-        @media(max-width: 991px) {
-            padding: 3rem 12rem;
-        }
 
         &_inner {
             margin-bottom: 2rem;
@@ -35,7 +35,7 @@
                 align-items: center;
 
                 @media(max-width: 991px) {
-                    justify-content: flex-start;
+                    justify-content: center;
                 }
 
                 span {
@@ -86,6 +86,7 @@
 
             @media(max-width: 991px) {
                 font-size: 3rem;
+                padding-left: 4.2rem;
             }
 
             span {
